--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=dscc-database.c3vxk6yipmfi.eu-north-1.rds.amazonaws.com;Database=Employee;User Id=admin;Password=Kamilla2018;Integrated Security=false;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=dscc-database.cztlvvbwoaer.eu-north-1.rds.amazonaws.com;Database=Employee;User Id=admin;Password=Aa2002aA&;Integrated Security=false;TrustServerCertificate=true;"
   },
   "AllowedHosts": "*"
 }
